# helpdesk

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/actions/helm-lint/: action.yml
.github/actions/poetry-setup/: action.yml
.github/workflows/: default.yml  helm.yml
chart/: Chart.yaml
configuration/prometheus/: config.yml
docker/: Dockerfile  entrypoint.sh
helm/: values.yaml
helm/templates/: _helpers.tpl  app.yml  claims.yml  config.yml
kubernetes/: database.yml  migrate.yml  namespace.yml  secrets.yml  volumes.yml
scripts/: create-es-admin.sh  kind-cleanup.sh  kind-cluster-setup.sh
src/: alembic.ini  pyproject.toml
src/app/: main.py
src/app/api/: user.py
src/app/core/: database.py  logger.py  metrics.py  middlewares.py  settings.py
src/app/models/: user.py
src/app/schemas/: user.py
src/migrations/: env.py
src/migrations/versions/: 20250217_55d915f15b92_setup.py
src/tests/: conftest.py
src/tests/api/: test_user.py
