[project]
name = "helpdesk"
version = "0.1.0"
description = "AI Help Desk"
authors = [
    {name = "MrHenryD"}
]
license = {text = "Apache License 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "requests (>=2.32.3,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "python-json-logger (>=3.2.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
parameterized = "^0.9.0"
pytest-cov = "^6.0.0"
bandit = "^1.8.2"
black = "^25.1.0"
coverage = "^7.6.12"
ruff = "^0.9.6"
httpx = "^0.28.1"

[tool.ruff]
src = ["app", "tests"]
line-length = 88
lint.select = [
    "E",
    "F",
    "W",
    "I001"
]
lint.ignore = ["E203", "E501"]

